--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://gonzalo-vidalon-portfolio.netlify.app/
+baseURL: https://jesus-website1.netlify.app/
 languageCode: en-us
 title: Portfolio website for Jesus Tuesta
 theme: forty
