--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ params:
   blog: {}
   contact:
     address:
-      - city: London
+      - city: Londons
         country: UK
         street: 1 North Bank, Flat 33
         title: Regent Court
